--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
 <script src="views/admin/admin.js"></script>
 <script src="views/main/main.js"></script>
 <body ng-app="PassportApp">
+	<h1>Hello World</h1>
     <div ng-view>
     </div>
 </body>
