--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,13 @@
 <script src="views/login/login.js"></script>
 <script src="views/admin/admin.js"></script>
 <script src="views/main/main.js"></script>
+
+<style  src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css"></style>
 <body ng-app="PassportApp">
 	<h1>Hello World</h1>
     <div ng-view>
     </div>
+
+	<script src="//code.jquery.com/jquery-2.1.3.min.js"></script>
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 </body>
